@@ -1,3 +1,5 @@
+* BUG#6848 Passage en surchargeable de la méthode pour retrouver les lignes depuis un aggrégat
+
 Version 1.12 - 2017-04-28
 * FEA#0000 Les agrégats sont triés de façon à être équilibrés
 * FEA#0000 Ajout du paramètre de batch "output_folder"
